--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1>Hello world!</h1>
     </header>
     <main>
-
+        <section>
+            <h1>hola</h1>
+        </section>
     </main>
     <footer>
 
