--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   
   <div class="container-fluid " id="div1">
     <h2 class="pt-5 m-4 ">TU TIENDA ONLINE DE VINILOS</h2>
-    <a href="./pages/todos.html" class="btn btn-success"><i class="bi bi-vinyl"></i></i>  ir a comprar </a>
+    <a href="./todos.html" class="btn btn-success"><i class="bi bi-vinyl"></i></i>  ir a comprar </a>
   </div>
   <div class="container-fluid" id="div2">
     <h2 class="pt-5 ">Elige el mejor sistema de sonido para ti</h2>
@@ -66,6 +66,7 @@
 <script type="module" src="./js/app.js"></script>
 <script type="module" src="./js/carrito.js"></script>
 <script type="module" src="./js/ui.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
