--- a/todos.html
+++ b/todos.html
@@ -9,14 +9,14 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
 <header class="header">
   <nav class="navbar navbar-expand-lg fixed-top bg-body-secondary p-2" id="menu">
     <div class="container-fluid">
-      <a class="navbar-brand " href="../index.html"><img src="../assets/Group 2.png" alt=""></a>
+      <a class="navbar-brand " href="../index.html"><img src="./assets/Group 2.png" alt=""></a>
       <button class="navbar-toggler" href="#" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,7 +35,7 @@
             <a class="nav-link disabled" aria-disabled="true">Donde estamos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" id="abrirCarrito" aria-disabled="true" href="./carrito.html"></i>Carrito <i class="bi bi-cart" id=""></i></a>
+            <a class="nav-link active" id="abrirCarrito" aria-disabled="true" href="./carrito.html"></i><i class="bi bi-cart" id=""><span id="cuenta-carrito">0</span></i></a>
           </li>
         </ul>
       </div>
@@ -46,15 +46,7 @@
 
 <main>
     <div class="container-fluid " id="div3">
-        <h2 class="">TU TIENDA ONLINE DE VINILOS</h2>
-    </div>
-
-    <div class="cartContainer" id="cartContainer">
-      <div class="container-fluid d-flex flex-column" id="cartContainer">
-        <h2 class="pt-1 fs-2 text-center text-black">Tu carrito</h2>
-        <div class="cart__item"></div>
-        <div class="cart__totalPrice">Total 0€</div>
-      </div>
+        <h2 class="">TODO PARA TU VINILO</h2>
     </div>
 
     <div class="container-fluid d-flex flex-row justify-content-center flex-sm-wrap gap-4 pt-3 pb-4 " id="containerList"></div>
@@ -67,9 +59,9 @@
   </div>
 </footer>
 </footer>
-<script type="module" src="../js/app.js"></script>
-<script type="module" src="../js/carrito.js"></script>
-<script type="module" src="../js/ui.js"></script>
+<script type="module" src="./js/app.js"></script>
+<script type="module" src="./js/carrito.js"></script>
+<script type="module" src="./js/ui.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
