--- a/todos.html
+++ b/todos.html
@@ -16,7 +16,7 @@
 <header class="header">
   <nav class="navbar navbar-expand-lg fixed-top bg-body-secondary p-2" id="menu">
     <div class="container-fluid">
-      <a class="navbar-brand " href="../index.html"><img src="./assets/Group 2.png" alt=""></a>
+      <a class="navbar-brand " href="./index.html"><img src="./assets/Group 2.png" alt=""></a>
       <button class="navbar-toggler" href="#" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
